--- a/devtools/package.json
+++ b/devtools/package.json
@@ -4,10 +4,13 @@
   "description": "MaltaJs Development Tools",
   "main": "Gruntfile.js",
   "devDependencies": {
+    "babelify": "^6.1.0",
     "body-parser": "~1.0.1",
     "bower": "1.2.7",
     "express": "~4.0.0",
     "grunt": "0.4.1",
+    "grunt-babel": "^5.0.3",
+    "grunt-browserify": "^3.8.0",
     "grunt-cli": "0.1.9",
     "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-concat": "0.3.0",
@@ -16,8 +19,6 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "0.5.3",
-    "babelify": "^6.1.0",
-    "grunt-browserify": "^3.8.0",
     "grunt-sass": "^1.0.0",
     "mongoose": "~3.6.13",
     "morgan": "~1.0.0",
